<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YummyEats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="tab_text_1">Customer</string>
    <string name="tab_text_2">Delivery</string>
    <string name="tab_text_3">Restaurant</string>

    <string name="register">Register</string>
    <string name="title_activity_restaurant_main">RestaurantMainActivity</string>
    <string name="title_activity_delivery_main">DeliveryMainActivity</string>
    <string name="btn_sign_up_text">Sign Up</string>
    <string name="btn_sign_in_text">Sign In</string>

    <string name="Reg_delivery_description">Foods To Your Door Step.</string>
    <string name="Reg_restaurent_description">Anything You Wish,We Have It. </string>
    <string name="Reg_customer_description">Keep Calm and Order Food.</string>

    <string name="reg_empty_field">Text fields cannot be empty</string>
    <string name="reg_frag_valid">Text fields cannot be empty</string>
    <string name="reg_frag_mobile_valid">Please enter a valid mobile number</string>
    <string name="reg_frag_email_valid">Please enter a valid email</string>
    <string name="reg_password_invalid">Password Mismatched</string>
    <string name="reg_phoneNo_exsist">Phone number has already registered</string>
    <string name="reg_successs">SignUp successful</string>

    <string name="Reg_full_name">Full Name</string>
    <string name="Reg_phone_number">Phone Number</string>
    <string name="Reg_address">Address</string>
    <string name="Reg_email">Email</string>
    <string name="Reg_vehicle">Vehicle Number</string>
    <string name="Reg_password">Password</string>
    <string name="Reg_confirm_password">Confirm Password</string>

    <string name="delivery_side_bar_Home">Home</string>
    <string name="delivery_side_bar_profile">Profile</string>
    <string name="delivery_side_bar_advance">Advanced</string>
    <string name="delivery_side_bar_settings">Settings</string>
    <string name="settings_msg">Settings Page</string>

    <string name="dialog_password_validation">Your password should have, at least eight characters and one or more of each of the following:\n\n\t• lower-case letter\n\t• upper-case letter\n\t• number\n\t• punctuation mark</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>

    <string name="food_reg_add_food_title">Add New Food</string>
    <string name="food_prof_name">Name</string>
    <string name="food_prof_descrip">Description\n\n\n\n</string>
    <string name="food_prof_price">Price</string>
    <string name="food_prof_category">Categories</string>

    <string name="food_cat_food">Food</string>
    <string name="food_cat_bev">Beverage</string>

    <string name="food_prof_img_upl">Choose an Image</string>
    <string name="food_prof_add">Add Food</string>

    <string name="food_profile_title">Food Profile</string>
    <string name="food_profile_description">Description</string>
    <string name="food_profile_price">Price</string>
    <string name="food_profile_category">Category</string>

    <string name="customer_profile_title">Customer Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_contact_no">Contact No</string>
    <string name="profile_address">Address</string>

    <string name="deliver_profile_title">Deliver Profile</string>
    <string name="delivery_profile_vehicle_no">Vehicle No</string>

    <string name="restaurant_profile_title">Restaurant Profile</string>

    <string name="incorrect_password">Incorrect Password</string>
    <string name="incorrect_password_text">Given password doesn\'t match with the mobile number. Please check and try again.</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="user_does_not_exist_text">Given mobile number is not registered yet. Please SignUp first.</string>
    <string name="food_added">Congratulations!</string>
    <string name="food_added_text">You launched a new food successfully.</string>

    <string name="settings_current_password">Current Password</string>
    <string name="settings_new_password">New Password</string>
    <string name="settings_new_confirm_password">Confirm new password</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>

    <string name="login_toast_field_empty">Text fields cannot be empty</string>
    <string name="login_toast_customer_successfull">Sign in as a customer successful</string>
    <string name="login_toast_driver_successfull">Sign in as a driver successful</string>
    <string name="login_toast_sign_successfull">Sign in successful</string>
    <string name="login_toast_went_wrong">Something went wrong!</string>
    <string name="login_toast_click_back">Please click BACK again to exit</string>
    <string name="login_toast_user_not_exist">User doesn\'t exist! Please Sign Up</string>
    <string name="Delete_Your_profile">Delete My Profile</string>

    <string name="dialog_delete">Do you want to delete this food item?</string>
    <string name="dialog_delete_text">If your delete, Food item will be removed from the system.</string>

    <string name="dialog_customer_delete_main">Do you want to delete your customer profile?</string>
    <string name="dialog_deliver_delete_main">Do you want to delete your deliver profile?</string>
    <string name="dialog_restaurant_delete_main">Do you want to delete your restaurant profile?</string>
    <string name="dialog_delete_secondary">If you delete, Your profile will be removed from the system.</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDelete">Delete</string>

</resources>
