<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/delivery_nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/delivery_side_bar_Home" />
        <item
            android:id="@+id/delivery_nav_profile"
            android:icon="@drawable/icon_person"
            android:title="@string/delivery_side_bar_profile" />

    </group>

    <item android:title="@string/delivery_side_bar_advance">
        <menu>
            <item
                android:id="@+id/delivery_nav_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/delivery_side_bar_settings"/>
        </menu>
    </item>

</menu>
