<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_customer_profile"
            android:icon="@drawable/icon_person"
            android:title="@string/customer_profile_title" />

    </group>

    <item android:title="Advanced">
        <menu>
            <item
                android:id="@+id/nav_customer_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/action_settings" />

        </menu>
    </item>

</menu>
