<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context=".FoodRegistrationActivity">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.PlaceholderFragment"
    android:orientation="vertical">

    <TextView
        android:layout_marginVertical="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_reg_add_food_title"
        android:textSize="@dimen/text_level_1"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/iv_foodImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/nav_header_vertical_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_food_registration_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/food_prof_name"
            android:textSize="@dimen/text_level_3"/>

        <EditText
            android:id="@+id/et_food_registration_description"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style_multiline"
            android:hint="@string/food_prof_descrip"
            android:textSize="@dimen/text_level_3"/>

        <EditText
            android:id="@+id/et_food_registration_price"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/food_prof_price"
            android:textSize="@dimen/text_level_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_prof_category"/>

        <RadioGroup
            android:id="@+id/tg_food_registration_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <RadioButton
                android:id="@+id/rb_food_registration_food"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/food_cat_food"
                android:buttonTint="@color/colorAccent"/>

            <RadioButton
                android:id="@+id/rb_food_registration_beverage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/food_cat_bev"
                android:buttonTint="@color/colorAccent"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <LinearLayout
            android:layout_marginVertical="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_food_registration_uploadImage"
                android:layout_marginVertical="@dimen/btn_text"
                android:textSize="@dimen/text_level_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_secondary_style"
                android:textColor="@color/colorAccent"
                android:text="@string/food_prof_img_upl"
                android:layout_marginLeft="2dp"/>

            <Button
                android:id="@+id/btn_food_registration_addFood"
                android:textSize="@dimen/text_level_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_primary_style"
                android:textColor="@color/colorPrimary"
                android:text="@string/food_prof_add"
                android:layout_marginLeft="2dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</ScrollView>

