<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.PlaceholderFragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/restaurantimg"/>

            <TextView
                android:textAlignment="center"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Reg_restaurent_description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/nav_header_vertical_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Reg_full_name"
                android:textSize="@dimen/text_level_3"/>

            <EditText
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Reg_phone_number"
                android:textSize="@dimen/text_level_3"/>

            <EditText
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Reg_email"
                android:textSize="@dimen/text_level_3"/>

            <EditText
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Reg_address"
                android:textSize="@dimen/text_level_3"/>

            <EditText
                android:id="@+id/et_register_res_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="Password"
                android:textSize="@dimen/text_level_3"/>

            <EditText
                android:id="@+id/et_register_res_confirm_password"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:hint="Confirm Password"
                android:textSize="@dimen/text_level_3"/>







            <LinearLayout
                android:layout_marginVertical="@dimen/nav_header_vertical_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_res_signIn"
                    android:textSize="@dimen/text_level_3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_secondary_style"
                    android:textColor="@color/colorAccent"
                    android:text="@string/btn_sign_in_text"
                    android:layout_marginRight="2dp"/>

                <Button
                    android:id="@+id/btn_res_signUp"
                    android:textSize="@dimen/text_level_3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_primary_style"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/btn_sign_up_text"
                    android:layout_marginLeft="2dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

